@@ -3,10 +3,11 @@ This file records noteworthy changes.  (Public domain.)
 
 dvips 2022.1 (TeX Live 2022):
   New option (and config file directive) -landscaperotate: try to
-  automatically match rotated page content and paper sizes; in the past,
-  this was done by default, but it is generally unnecessary nowadays,
-  and can be troublesome when converting to PDF, so now the default is
-  not to do this. This option re-enables the rotated matching.
+    automatically match rotated page content and paper sizes; in the past,
+    this was done by default, but it is generally unnecessary nowadays,
+    and can be troublesome when converting to PDF, so now the default is
+    not to do this. This option re-enables the rotated matching.
+  Use full font path (if specified) for tfm lookups, as with pk.
 
 dvips 2021.1 (TeX Live 2021):
   Default title is now the basename of the input file instead of the
@@ -15,8 +16,8 @@ dvips 2021.1 (TeX Live 2021):
   Support new feature of virtual font to fallback Japanese font definition.
 
 dvips 2020.1 (TeX Live 2020):
-  Encodings for bitmap fonts.
-  https://tug.org/TUGboat/tb40-2/tb125rokicki-type3search.pdf
+  Encodings for bitmap fonts:
+    https://tug.org/TUGboat/tb40-2/tb125rokicki-type3search.pdf
   
 dvips 5.999 (TeX Live 2019):
   Buffer overflows.
